--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "react-social-icons": "^5.7.0",
     "swiper": "^7.4.1",
     "web-vitals": "^2.1.3"
